--- a/config_sample.env
+++ b/config_sample.env
@@ -1,14 +1,14 @@
 # REQUIRED CONFIG
-BOT_TOKEN = "" # Enter your telegram bot token
-OWNER_ID = "" # Enter your telegram user id
-TELEGRAM_API = "" # Enter telegram API key
-TELEGRAM_HASH = "" # Enter telegram API hash
+BOT_TOKEN = "7848141232:AAFbHWLOX6h_5bZu_aFZgVBHQK91KgA3vWU" # Enter your telegram bot token
+OWNER_ID = "7577977996" # Enter your telegram user id
+TELEGRAM_API = "20836266" # Enter telegram API key
+TELEGRAM_HASH = "bbdd206f92e1ca4bc4935b43dfd4a2a1" # Enter telegram API hash
 
 # OPTIONAL CONFIG
-AUTHORIZED_CHATS = "" # Enter telegram chat id to authorize it
-SUDO_USERS = "" # Enter telegram user id for sudo access
+AUTHORIZED_CHATS = "-1002360731963" # Enter telegram chat id to authorize it
+SUDO_USERS = "7577977996" # Enter telegram user id for sudo access
 
-DATABASE_URL = "" # Enter mongo database URL for python 3.12 or higher
+DATABASE_URL = "mongodb+srv://cristi7jjr:tRjSVaoSNQfeZ0Ik@cluster0.kowid.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0" # Enter mongo database URL for python 3.12 or higher
 USER_SESSION_STRING = "" # Check readme to learn how to generate this
 
 # Optional API
@@ -52,7 +52,7 @@ UPSTREAM_REPO = "https://github.com/Dawn-India/Z-Mirror"
 UPSTREAM_BRANCH = "main"
 
 # Leech Settings
-AS_DOCUMENT = "False" # True or False
+AS_DOCUMENT = "True" # True or False
 LEECH_SPLIT_SIZE = "" # Enter only numbers in bytes
 LEECH_FILENAME_PREFIX = "Zee | "
 LEECH_FILENAME_SUFFIX = " | Zee"
@@ -96,9 +96,9 @@ DISABLE_SEED = "False" # True or False
 DISABLE_LEECH = "False" # True or False
 
 # Chat IDs
-FSUB_IDS = "" # Enter channel id for force subscribe
-LOG_CHAT_ID = "" # Enter channel id for task logs
-DUMP_CHAT_ID = "" # Enter channel id for leech dump
+FSUB_IDS = "-1002298889599" # Enter channel id for force subscribe
+LOG_CHAT_ID = "-1002257742904" # Enter channel id for task logs
+DUMP_CHAT_ID = "-1002257742904" # Enter channel id for leech dump
 
 #Limits
 STORAGE_THRESHOLD = "1" # Enter only numbers in GB
